# bess-optimization

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  simple_model.py
config/battery_params/: README.md  battery_params.py
config/environmental_params/: README.md
config/grid_params/: README.md
config/load_params/: README.md
config/market_params/: README.md
config/pv_params/: README.md
config/regulatory_params/: README.md
config/resource_params/: README.md
data/: README.md
docs/: README.md  user_guide.md
docs/models/: README.md
examples/: README.md
examples/advanced/: README.md
examples/basic/: README.md  multi_day_optimization.py  simple_arbitrage.py
examples/real_world/: README.md
notebooks/: README.md
scripts/: README.md  data_download.py
src/opt_engine/core/: README.md
src/opt_engine/interfaces/: README.md
src/opt_engine/models/: README.md
src/opt_engine/models/battery/: __init__.py  battery_model.py
src/opt_engine/models/load/: README.md
src/opt_engine/solvers/: README.md
src/opt_engine/utils/: cli_utils.py  config.py  data_utils.py  logging_utils.py
src/opt_engine/utils/visual/: visual_utils.py
tests/: test_installs.py
tests/performance/: README.md
