[project]
name = "bess-optimization"
version = "0.1.1"
description = "BESS optimization engine for energy arbitrage"
authors = [{ name = "Philip Regulski" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyomo>=6.9.1",
    "highspy>=1.10.0",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
